Update ClassFileApiDemo.java